set(NEKOHOOK_SOURCES "")
macro(AddFolder name)
    file(GLOB tmp_sources "${CMAKE_CURRENT_LIST_DIR}/${name}/*.cpp")
    file(GLOB headers "${CMAKE_CURRENT_LIST_DIR}/${name}/*.hpp")
    set(NEKOHOOK_SOURCES ${NEKOHOOK_SOURCES} ${tmp_sources})
    #install(FILES "${CMAKE_CURRENT_SOURCE_DIR}/${name}/CMakeLists.txt" DESTINATION "src/nekohook/${name}/")
    install(FILES ${tmp_sources} DESTINATION "src/nekohook/${name}")
    install(FILES ${headers} DESTINATION "src/nekohook/${name}")
endmacro(AddFolder)

AddFolder(.)
AddFolder(features)
AddFolder(game)
AddFolder(gfx)
AddFolder(ui)
AddFolder(util)
set(NEKOHOOK_SOURCES ${NEKOHOOK_SOURCES} PARENT_SCOPE)

install(FILES "${CMAKE_CURRENT_LIST_DIR}/CMakeLists.txt" DESTINATION "src/nekohook")
